parser/tests/bad/str03-2.st
% max length of a 'string' must be in range 1 ~ 255
%   length exceed limit

var str: string(256)
